[build-system]
requires = ["setuptools>=64.0.0", "wheel", "build"]
build-backend = "setuptools.build_meta"

[project]
name = "literate-octo-umbrella"
version = "0.1.dev"
requires-python = ">=3.10"
dependencies = ["numpy"]

[tool.setuptools.packages.find]
include = ["lou"]

[tool.mypy]
ignore_missing_imports = true
